# agent-economy

./: DELEGATE.md  README.md  justfile
.beads/: issues.jsonl
.claude/: settings.json
.claude/commands/: codex.md
agents/: config.yaml
config/semgrep/: no-default-values.yml  no-direct-sql.yml  no-noqa.yml  no-pytest-skip.yml  no-silent-catch.yml  no-silent-exception.yml  no-type-suppression.yml
docs/: service-implementation-guide.md
docs/codex-tasks/: 2026-03-01-observatory-frontend-build-and-serve.md  central-bank-acceptance-tests.md  court-wiring-e2e-fix.md  feeder-review-loop-tests.md  fund-feeder-implementation.md  fund-feeder-tests.md  (+4 more)
libs/service-clients/: pyproject.toml
libs/service-clients/src/service_clients/: __init__.py  bank.py  base.py  court.py  gateway.py  identity.py  reputation.py  task_board.py
scripts/: ci-all-quiet-hook.sh  service-helpers.sh
services/ui/: Dockerfile  (+3 more)
tools/: justfile  pyproject.toml  seed-economy.sh
tools/scenarios/: full-lifecycle.yaml  quick.yaml  scale.yaml
tools/src/demo_replay/: __init__.py  __main__.py  clients.py  engine.py  master.py  puppet.py  wallet.py
tools/src/math_task_factory/: __init__.py  __main__.py  factory.py  llm_dressup.py  types.py
tools/src/math_task_factory/generators/: __init__.py  chains.py  combined.py  constraints.py  large_arithmetic.py  state_tracking.py  word_problems.py
tools/tests/: conftest.py
tools/tests/unit/: conftest.py  test_chains.py  test_combined.py  test_constraints.py  test_large_arithmetic.py  test_llm_dressup.py  test_state_tracking.py  test_word_problems.py
(+285 files in other folders)
