[project]
name = "service-clients"
version = "0.1.0"
description = "Shared HTTP client library for inter-service communication"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "service-commons",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
service-commons = { path = "../service-commons", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/service_clients"]
